feat: implement order service with business rules